name:                bench
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base
  default-language: Haskell2010

benchmark time
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Time.hs
  build-depends:     base
                   , bytestring
                   , vector
                   , ghc-prim
                   , criterion
                   , deepseq
                   , containers
